force-app/main/default/objects/Concurrent_Projects_RL__c/Concurrent_Projects_RL__c.object-meta.xml
<CustomObject>
    <label>Concurrent Project RL</label>
    <nameField>
        <label>Concurrent Projects RL Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Concurrent Projects RL</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>