force-app/main/default/objects/Concurrent_Projects_RL__c/fields/currAmount__c.field-meta.xml
<CustomField>
    <fullName>currAmount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>