force-app/main/default/objects/Concurrent_Projects_RL__c/fields/rmdMaster__c.field-meta.xml
<CustomField>
    <fullName>rmdMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>PBS_Project__c</referenceTo>
    <relationshipLabel>Concurrent Projects RL</relationshipLabel>
    <relationshipName>Concurrent_Projects_RL</relationshipName>
    <type>Lookup</type>
</CustomField>