force-app/main/default/objects/Concurrent_Projects_RL__c/fields/txtConstraints__c.field-meta.xml
<CustomField>
    <fullName>txtConstraints__c</fullName>
    <label>Constraints (Scope, Cost, Schedule)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>