force-app/main/default/objects/Concurrent_Projects_RL__c/fields/txtPossibleImpact__c.field-meta.xml
<CustomField>
    <fullName>txtPossibleImpact__c</fullName>
    <label>Possible Impact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>