force-app/main/default/objects/Concurrent_Projects_RL__c/fields/txtProjectName__c.field-meta.xml
<CustomField>
    <fullName>txtProjectName__c</fullName>
    <label>Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>